update path, ssh config and backup conf

--- a/.ssh/config
+++ b/.ssh/config
@@ -1,8 +1,15 @@
 Host gitlab.tuni.fi
 	User git
-	IdentityFile ~/.ssh/gitlab-tuni
+	IdentityFile ~/.ssh/rabijl@SNOW-OWL
 	ForwardX11	no
 Host github.com
 	User git
-	IdentityFile ~/.ssh/github-tuni
+	IdentityFile ~/.ssh/rabijl@SNOW-OWL
 	ForwardX11	no
+
+Host pi-server
+	Hostname 192.168.1.105
+	User dude
+
+Host 192.168.1.1
+	HostKeyAlgorithms +ssh-rsa
