--- a/.ssh/config
+++ b/.ssh/config
@@ -13,3 +13,8 @@ Host pi-server
 
 Host 192.168.1.1
 	HostKeyAlgorithms +ssh-rsa
+
+Host mau-server
+	Hostname 185.70.187.120
+	User rabijl
+	IdentityFile ~/.ssh/rabijl@SNOW-OWL
