--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -19,10 +19,20 @@ set-option -g renumber-windows on
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'christoomey/vim-tmux-navigator'
-set -g @plugin 'catppuccin/tmux'
+
+# these two themes will be installed as tmux in
+# the pluging folder, you need to remove these 
+# by yourself when uninstalling
+#set -g @plugin 'catppuccin/tmux'
+#set -g @plugin 'nordtheme/tmux'
+
+set -g @plugin 'fabioluciano/tmux-tokyo-night'
+
+set -g @theme_variation 'night'
 
 run '~/.tmux/plugins/tpm/tpm'
 
 # open panes in same directory
 bind '"' split-window -v -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
+
